resolve error ci build #12 no dashboard no pop up window